--- a/.github/workflows/main_azure.yml
+++ b/.github/workflows/main_azure.yml
@@ -37,12 +37,12 @@ jobs:
         inlineScript: |
             az storage blob upload-batch --account-name jobshopcollectionblob -s ./build -d '$web'
 
-#    - name: Purge CDN endpoint
-#      uses: azure/CLI@v1
-#      with:
-#        azcliversion: 2.0.72
-#        inlineScript: |
-#           az cdn endpoint purge --content-paths  "/*" --profile-name "CDN_PROFILE_NAME" --name "CDN_ENDPOINT" --resource-group "RESOURCE_GROUP"
+    - name: Purge CDN endpoint
+      uses: azure/CLI@v1
+      with:
+        azcliversion: 2.0.72
+        inlineScript: |
+           az cdn endpoint purge --content-paths  "/*" --profile-name "jobshopcollection" --name "jobshopcollection" --resource-group "JobShopCollectionResourceGroup"
 
   # Azure logout 
     - name: logout
