--- a/.github/workflows/main_linode.yml
+++ b/.github/workflows/main_linode.yml
@@ -1,9 +1,8 @@
 name: build and deploy on linode
 
 on:
-  push:
-    branches:
-      - master
+    push:
+        branches: [ main ]
 
 jobs:
   build:
