--- a/.github/workflows/main_linode.yml
+++ b/.github/workflows/main_linode.yml
@@ -8,8 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-        REACT_APP_API_URL: "https://job-shop-collection-api.azurewebsites.net"
-        REACT_APP_HOST: "Azure"
+        REACT_APP_HOST: "Linode"
     steps:            
     - name: Checkout the repo
       uses: actions/checkout@v1
