--- a/.github/workflows/main_linode.yml
+++ b/.github/workflows/main_linode.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-        REACT_APP_HOST: "Linode"
+        REACT_APP_HOST: "linode"
     steps:            
     - name: Checkout the repo
       uses: actions/checkout@v1
