--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "^4.4.5",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
@@ -16,7 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint ./src"
+    "eslint": "eslint ./src",
+    "start-production": "http-server build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,7 +40,10 @@
         "warn",
         {
           "allow": "as-needed",
-          "extensions": [".tsx", ".jsx"]
+          "extensions": [
+            ".tsx",
+            ".jsx"
+          ]
         }
       ]
     }
@@ -53,6 +61,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-import": "^2.23.4"
+    "eslint-plugin-import": "^2.23.4",
+    "http-server": "^0.12.3"
   }
 }
