Add types for styled component LabeledIconButton and PageContainer

--- a/package.json
+++ b/package.json
@@ -52,6 +52,12 @@
             ".jsx"
           ]
         }
+      ],
+      "@typescript-eslint/consistent-type-imports": [
+        "warn",
+        {
+          "prefer": "type-imports"
+        }
       ]
     }
   },
