--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
+    "url-template": "^2.0.8",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -75,6 +76,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@types/url-template": "^2.0.28",
     "eslint-plugin-import": "^2.23.4",
     "http-server": "^0.12.3"
   }
