--- a/package.json
+++ b/package.json
@@ -87,5 +87,6 @@
     "@types/url-template": "^2.0.28",
     "eslint-plugin-import": "^2.23.4",
     "http-server": "^0.12.3"
-  }
+  },
+  "proxy": "http://localhost:55758"
 }
