--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
-    "eslint": "eslint ./src",
+    "eslint": "eslint --ext ts,tsx,js,jsx src",
     "cosmos": "cross-env FAST_REFRESH=false cosmos",
     "cosmos:export": "cosmos-export",
     "start-production": "http-server build"
@@ -65,7 +65,15 @@
           "prefer": "type-imports"
         }
       ]
-    }
+    },
+    "overrides": [
+      {
+        "files": ["**/?(*.)+(fixture).[jt]s?(x)"],
+        "rules": {
+          "import/no-default-export": ["off"]
+        }
+      }
+    ]
   },
   "jest": {
     "moduleNameMapper": {
