--- a/package.json
+++ b/package.json
@@ -68,9 +68,13 @@
     },
     "overrides": [
       {
-        "files": ["**/?(*.)+(fixture).[jt]s?(x)"],
+        "files": [
+          "**/?(*.)+(fixture).[jt]s?(x)"
+        ],
         "rules": {
-          "import/no-default-export": ["off"]
+          "import/no-default-export": [
+            "off"
+          ]
         }
       }
     ]
@@ -99,7 +103,11 @@
     "cross-env": "^7.0.3",
     "eslint-plugin-import": "^2.23.4",
     "http-server": "^0.12.3",
+    "msw": "^0.33.0",
     "react-cosmos": "^5.6.3"
   },
-  "proxy": "http://localhost:55758"
+  "proxy": "http://localhost:55758",
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
