--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-simple-timefield": "^3.2.3",
     "typescript": "^4.3.5",
     "url-template": "^2.0.8",
     "web-vitals": "^1.0.1"
