--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.17",
     "clsx": "^1.1.1",
     "date-fns": "^2.22.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -100,6 +101,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
     "@types/react-router-dom": "^5.1.7",
     "@types/url-template": "^2.0.28",
     "cross-env": "^7.0.3",
