--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.22.1",
     "lodash": "^4.17.21",
+    "memoize-one": "^5.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
