--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && compress-cra",
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "eslint": "eslint --ext ts,tsx,js,jsx src",
     "cosmos": "cross-env FAST_REFRESH=false REACT_APP_SHOW_EDITOR_STATE=true cosmos",
     "cosmos:export": "cosmos-export",
     "build-stats": "react-scripts build --stats && webpack-bundle-analyzer build/bundle-stats.json",
-    "start-production": "http-server build"
+    "start-production": "http-server build -g"
   },
   "eslintConfig": {
     "extends": [
@@ -107,6 +107,7 @@
     "@types/lodash": "^4.14.172",
     "@types/react-router-dom": "^5.1.7",
     "@types/url-template": "^2.0.28",
+    "compress-create-react-app": "^1.1.3",
     "cross-env": "^7.0.3",
     "eslint-plugin-import": "^2.23.4",
     "http-server": "^0.12.3",
