--- a/.github/workflows/main_azure.yml
+++ b/.github/workflows/main_azure.yml
@@ -44,6 +44,13 @@ jobs:
       with:
         name: .build-app
 
+    - name: Set Azure subscription
+      uses: azure/CLI@v1
+      with:
+        azcliversion: 2.0.72
+        inlineScript: |
+            az account set -s ${{ secrets.AZURE_SUBSCRIPTION }}
+
     - name: Upload to blob storage
       uses: azure/CLI@v1
       with:
