--- a/.github/workflows/main_azure.yml
+++ b/.github/workflows/main_azure.yml
@@ -49,13 +49,14 @@ jobs:
 #      with:
 #        azcliversion: 2.0.72
 #        inlineScript: |
-#            az account set -s ${{ secrets.AZURE_SUBSCRIPTION }}
+#             az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION }}
 
     - name: Upload to blob storage
       uses: azure/CLI@v1
       with:
         azcliversion: 2.0.72
         inlineScript: |
+            az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION }}
             az storage blob upload-batch --account-name jobshopcollectionblob -s . -d '$web' --subscription ${{ secrets.AZURE_SUBSCRIPTION }}
 
     - name: Purge CDN endpoint
