--- a/.github/workflows/main_azure.yml
+++ b/.github/workflows/main_azure.yml
@@ -57,6 +57,7 @@ jobs:
         azcliversion: 2.0.72
         inlineScript: |
             az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION }}
+            az account show
 #            az storage blob upload-batch --account-name jobshopcollectionblob -s . -d '$web' --subscription ${{ secrets.AZURE_SUBSCRIPTION }}
 
     - name: Purge CDN endpoint
