--- a/.github/workflows/main_azure.yml
+++ b/.github/workflows/main_azure.yml
@@ -1,3 +1,4 @@
+# Disabling thisi workflow. Deployment to azure suddenly does not work, with no change on my end. Change to deploy manually.
 name: Blob storage website CI
 
 on:
